Added control pages, updated service, added new models, tested country

--- a/BookLibraryClient/src/app/dashboard/dashboard.component.html
+++ b/BookLibraryClient/src/app/dashboard/dashboard.component.html
@@ -25,6 +25,16 @@
         <div class="col">
             Go to Admin Pages
             <button class="btn btn-primary" routerLink="/admin">Admin</button>     
-           </div>
+            <br>
+            Go to Available Books Pages
+            <button class="btn btn-primary" routerLink="/admin/all">Avaiable Books</button>
+            <br>
+            Go to Book Control
+            <button class="btn btn-primary" routerLink="/admin/bookControl">Book Control</button>
+            <br>
+            Go to Country Control
+            <button class="btn btn-primary" routerLink="/admin/countryControl">Country Control</button>
+            <br>
+        </div>   
     </div>
 </div>
