--- a/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
@@ -8,7 +8,9 @@
       <app-get-country></app-get-country>
       <app-genre-control></app-genre-control>
       <app-language-control></app-language-control>
+      <app-publisher-control></app-publisher-control>
       <app-order-control></app-order-control>
+      <app-user-control></app-user-control>
     </div>
   </div>
 </div>
