--- a/BookLibraryClient/src/app/admin-dashboard/components/authors/author-control/author-control.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/authors/author-control/author-control.component.html
@@ -29,7 +29,7 @@
             </ng-container>
           </td>
         <td><button class="btn btn-warning" routerLink="/admin/authorControl/updateAuthor/{{author.id}}">Edit</button></td>
-        <td><button class="btn btn-danger" (click)="deleteBook(author.id)">Delete</button></td>
+        <td><button class="btn btn-danger" (click)="deleteAuthor(author.id)">Delete</button></td>
       </tr>
     </tbody>
   </table>
