--- a/BookLibraryClient/src/app/admin-dashboard/components/books/detailed-book/detailed-book.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/detailed-book/detailed-book.component.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li>Author:</li>
                     <li>Year of Publish: {{book.yearOfPublish}}</li>
-                    <li>Publisher: {{book.publisherId}}</li>
-                    <li>Language: {{book.languageId}}</li>
+                    <li>Publisher: {{book.publisher.name}}</li>
+                    <li>Language: {{book.language.name}}</li>
                     <li>Price: {{book.rentalPrice}} € for 5 day rent</li>
                     <li>In stock: {{book.unitNumber}}</li>
                 </ul>
