--- a/BookLibraryClient/src/app/shared/navbar/navbar.component.html
+++ b/BookLibraryClient/src/app/shared/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </ul>
     </div>
   </nav> -->
-
+<!-- 
   <nav class="flex align-center">
     <a href="#"><span>Book</span>Library</a>
     <ul>
@@ -26,4 +26,64 @@
         <button class="btn login">Log In</button>
       </li>
     </ul>
-  </nav>
+  </nav> -->
+
+  <div id="app" class="app app-header-fixed app-sidebar-fixed">
+  <!-- BEGIN #header -->
+  <div id="header" class="app-header">
+    <!-- BEGIN navbar-header -->
+    <div class="navbar-header">
+      <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span> <b>Book</b> Library</a>
+      <button type="button" class="navbar-mobile-toggler" data-toggle="app-sidebar-mobile">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <!-- END navbar-header -->
+
+    <!-- BEGIN header-nav -->
+    <div class="navbar-nav">
+      <div class="navbar-item navbar-form">
+        <form action="" method="POST" name="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Enter keyword" />
+            <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
+          </div>
+        </form>
+      </div>
+      <div class="navbar-item dropdown">
+        <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
+          <i class="fa fa-cart-plus"></i>
+          <span class="badge">0</span>
+        </a>
+        <div class="dropdown-menu media-list dropdown-menu-end">
+          <div class="dropdown-header">CART</div>
+          <div class="text-center w-300px py-3">
+            No Books in Cart
+          </div>
+        </div>
+      </div>
+      <div class="navbar-item navbar-user dropdown">
+        <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+          <div class="image image-icon bg-gray-800 text-gray-600">
+            <i class="fa fa-user"></i>
+          </div>
+          <span class="d-none d-md-inline">Hrvoje Horvat</span> <b class="caret ms-10px"></b>
+        </a>
+        <div class="dropdown-menu dropdown-menu-end me-1">
+          <a href="EditProfile.html" class="dropdown-item">Edit Profile</a>
+          <a href="javascript:;" class="dropdown-item"><span class="badge badge-danger float-end">2</span>
+            My Rentlas</a>
+          <a href="javascript:;" class="dropdown-item">Currently Renting</a>
+          <a href="javascript:;" class="dropdown-item">Setting</a>
+          <div class="dropdown-divider"></div>
+          <a href="login.html" class="dropdown-item">Log Out</a>
+        </div>
+      </div>
+    </div>
+    <!-- END header-nav -->
+  </div>
+  <!-- END #header -->
+  </div>
+  
