--- a/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
@@ -60,8 +60,60 @@
                     />
             </div>
             <div class="form-group">
-                <label><strong>Status:</strong></label>
-                {{ currentBook.publisherId}}
+              <label for="language.name">Language</label>
+              <input
+                  type="text"
+                  class="form-control"
+                  id="language.name"
+                  [(ngModel)]="currentBook.language.name"
+                  name="language"
+                  />
+          </div>
+          <div class="form-group">
+            <label for="publisher.name">Publisher</label>
+            <input
+                type="text"
+                class="form-control"
+                id="publisher.name"
+                [(ngModel)]="currentBook.publisher.name"
+                name="publisher.name"
+                />
+        </div>
+            <div class="row">
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="authors">Authors</label>
+                  <div *ngFor="let author of authors">
+                  <input
+                      type="checkbox"
+                      class="form-control-sm"
+                      id="authors"
+                      [(ngModel)]="currentBook.authors.firstName + ' ' + currentBook.authors.lastName"
+                      name="authors"
+                      /> {{author.firstName + ' ' + author.lastName}}
+                  </div>
+              </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="genres">Genres</label>
+                  <div *ngFor="let genre of genres">
+                  <input
+                      type="checkbox"
+                      class="form-control-sm"
+                      id="genres"
+                      [(ngModel)]="currentBook.genres.name"
+                      name="genres"
+                      /> {{genre.name}}
+                  </div>
+              </div>
+              </div>
+              <div class="col-md-3">
+                3
+              </div>
+              <div class="col-md-3">
+                4
+              </div>
             </div>
         </form>
         <!-- <button
