--- a/BookLibraryClient/src/app/admin-dashboard/components/countries/get-country/get-country.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/countries/get-country/get-country.component.html
@@ -6,9 +6,9 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Book Title</th>
-        <th scope="col">Author</th>
-        <th scope="col">Rental Price</th>
+        <th scope="col">Language</th>
+        <th scope="col">Short Name</th>
+        <th scope="col">VAT</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
       </tr>
