--- a/BookLibraryClient/src/app/admin-dashboard/components/countries/update-country/update-country.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/countries/update-country/update-country.component.html
@@ -1,33 +1,33 @@
 <button class="badge badge-secondary mb-3"  (click)="goBack()"> Back</button>
 
 <div *ngIf="currentCountry?.id" class="edit-form">
-        <h4>Edit Book '{{currentCountry.name}} '</h4>
+        <h4>Edit Country '{{currentCountry.name}} '</h4>
         <form>
             <div class="form-group">
-                <label for="name">Book Title</label>
+                <label for="name">Country</label>
                 <input
                     type="text"
                     class="form-control"
                     id="name"
                     [(ngModel)]="currentCountry.name"
-                    name="title"
+                    name="name"
                     />
             </div>
 
             
             <div class="form-group">
-                <label for="name">Book Desc</label>
+                <label for="shortName">ShortName (max. 3 char)</label>
                 <input
                     type="text"
                     class="form-control"
-                    id="name"
+                    id="shortName"
                     [(ngModel)]="currentCountry.shortName"
-                    name="description"
+                    name="shortName"
                     />
             </div>
             
             <div class="form-group">
-                <label for="yearOfPublish">Year of Publish</label>
+                <label for="vat">VAT %</label>
                 <input
                     type="number"
                     class="form-control"
@@ -37,29 +37,15 @@
                     />
             </div>
         </form>
-        <!-- <button
-      class="badge badge-primary mr-2"
-      *ngIf="currentBook.published"
-      (click)="updatePublished(false)"
-    >
-      UnPublish
-    </button> -->
-    <!-- <button
-      *ngIf="!currentBook.published"
-      class="badge badge-primary mr-2"
-      (click)="updatePublished(true)"
-    >
-      Publish
-    </button> -->
-    <button class="badge badge-danger mr-2" (click)="deleteBook()">
+    <button class="badge badge-danger mr-2" (click)="deleteCountry()">
       Delete
     </button>
-    <button type="submit" class="badge badge-success mb-2" (click)="updateBook(currentCountry)">
+    <button type="submit" class="badge badge-success mb-2" (click)="updateCountry(currentCountry)">
         Update
     </button>
     </div>
     <div *ngIf="!currentCountry?.id">
         <br />
-        <p>Cannot access this Book...</p>
+        <p>Cannot access this Country...</p>
     </div>
   
