--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/genre-control/genre-control.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/genre-control/genre-control.component.html
@@ -29,7 +29,7 @@
             </ng-container>
           </td>
         <td><button class="btn btn-warning" routerLink="/admin/genreControl/updateGenre/{{genre.id}}">Edit</button></td>
-        <td><button class="btn btn-danger" (click)="deleteBook(genre.id)">Delete</button></td>
+        <td><button class="btn btn-danger" (click)="deleteGenre(genre.id)">Delete</button></td>
       </tr>
     </tbody>
   </table>
