--- a/BookLibraryClient/src/app/admin-dashboard/components/orders/order-control/order-control.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/orders/order-control/order-control.component.html
@@ -1,2 +1,52 @@
 <h2>Order Control</h2>
-<p> Prazno ! </p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-10">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">User</th>
+            <th scope="col">Date</th>
+            <th scope="col">Books</th>
+            <th scope="col">Rental Price</th>
+            <th scope="col">Rental Price with VAT</th>
+            <th scope="col">Currency</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let order of orders">
+            <th scope="row">{{order.id}}</th>
+            <td>{{order.user.firstName}} {{order.user.lastName}} </td>
+            <td>{{order.date | date}}</td>
+            <td>
+              <ng-container *ngFor="let book of order.books, let i = index">
+                <ng-container *ngIf="i > 0">,</ng-container>
+                {{book.title}}
+              </ng-container>
+            </td>
+            <td>{{order.totalRentalPrice}}</td>
+            <td>{{order.totalRentalPriceWithVAT}}</td>
+            <td>{{order.currency}}</td>
+            <td><button class="btn btn-warning" routerLink="/admin/orderControl/updateOrder/{{order.id}}">Edit</button>
+            </td>
+            <td><button class="btn btn-danger" (click)="deleteOrder(order.id)">Delete</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-2">
+      <button class="btn btn-success" routerLink="/admin/orderControl/addOrder">Add Order</button>
+    </div>
+  </div>
+</div>
+
+<!-- 
+<td>
+    <ng-container *ngFor="let book of order, let i = index">
+      <ng-container *ngIf="i > 0">,</ng-container>
+      {{book.title}}
+    </ng-container>
+  </td> -->
