--- a/BookLibraryClient/src/app/app.component.html
+++ b/BookLibraryClient/src/app/app.component.html
@@ -11,6 +11,10 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col">
+        Sidebar
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-10">
         <router-outlet></router-outlet>
       </div>
     </div>
