--- a/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-basket.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-basket.component.html
@@ -155,7 +155,7 @@
                             </div>
                           </div>
                         </div>
-                        <button type="button" class="btn btn-info btn-block btn-lg" routerLink="/user/userBasket/paymentInfo">
+                        <button type="button" class="btn btn-info btn-block btn-lg" routerLink="/user/paymentInfo">
                           <div class="d-flex justify-content-between">
                             <span>$4818.00</span>
                             <span>Payment <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
