--- a/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-payment-info/user-payment-info.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-payment-info/user-payment-info.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <body>
   <!-- BEGIN #app -->
   <div id="app" class="app app-header-fixed app-sidebar-fixed">
@@ -102,8 +103,7 @@
                         <p class="mb-2">Total(Incl. taxes)</p>
                         <p class="mb-2">$4818.00</p>
                       </div>
-                      <button class="btn btn-success" routerLink="orderComplete">Buttonac</button>
-                      <button type="button" class="btn btn-info btn-block btn-lg" (click)="checkout()">
+                      <button type="button" class="btn btn-info btn-block btn-lg" routerLink="/user/orderComplete">
                         <div class="d-flex justify-content-between">
                           <span>$4818.00</span>
                           <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
