--- a/BookLibraryClient/src/app/admin-dashboard/components/authors/add-author/add-author.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/authors/add-author/add-author.component.html
@@ -37,7 +37,7 @@
               <td>{{author.dateOfBirth}}</td>
               <td>{{author.country}}</td>
               <td>{{author.bibliography}}</td>
-              <!-- <td>{{author.books}}</td> -->
+              <!-- <td>{{author.books.name}}</td> -->
             </tr>
           </tbody>
         </table>
