--- a/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
@@ -88,7 +88,7 @@
                       type="checkbox"
                       class="form-control-sm"
                       id="authors"
-                      [(ngModel)]="currentBook.authors.firstName + ' ' + currentBook.authors.lastName"
+                      [(ngModel)]="currentBook.authors!.firstName + ' ' + currentBook.authors!.lastName"
                       name="authors"
                       /> {{author.firstName + ' ' + author.lastName}}
                   </div>
@@ -102,7 +102,7 @@
                       type="checkbox"
                       class="form-control-sm"
                       id="genres"
-                      [(ngModel)]="currentBook.genres.name"
+                      [(ngModel)]="currentBook.genres!.name"
                       name="genres"
                       /> {{genre.name}}
                   </div>
