--- a/BookLibraryClient/src/app/admin-dashboard/components/books/book-control/book-control.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/book-control/book-control.component.html
@@ -12,6 +12,7 @@
         <th scope="col">Language</th>
         <th scope="col">Genres</th>
         <th scope="col">Rental Price</th>
+        <th scope="col">Orders</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
       </tr>
@@ -35,6 +36,13 @@
           </ng-container>
         </td>
         <td>{{book.rentalPrice}}</td>
+        <td>
+          <ng-container *ngFor="let order of book.orders, let i = index">
+            <ng-container *ngIf="i > 0">,</ng-container>
+            {{order.id}}
+          </ng-container>
+        </td>
+
         <td><button class="btn btn-warning" routerLink="/admin/editbook/{{book.id}}">Edit</button></td>
         <td><button class="btn btn-danger" (click)="deleteBook(book.id)">Delete</button></td>
       </tr>
