Items Add components updated

--- a/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,60 @@
 <div class="album py-5 bg-light">
   <div class="container">
+    <div>
+      POST Book: <br>
+      1 Publisher ✓, 1 Language ✓<br> 
+      Many Authors ✓, Many Genres ✓, Many Orders ✓
+    </div>
+    <hr>
 
+    <div>
+      POST Author: <br>
+      1 Country ✓<br> 
+      Many Books ✓
+    </div>
+    <hr>
+
+    <div>
+      POST Country: <br>
+      <br> 
+      Many Authors ✓
+    </div>
+    <hr>
+
+    <div>
+      POST Genre: <br>
+      <br> 
+      Many Books ✓
+    </div>
+    <hr>
+
+    <div>
+      POST Language: <br>
+      <br> 
+      Many Books ✓
+    </div>
+    <hr>
+
+    <div>
+      POST Publisher: <br>
+      <br> 
+      Many Books ✓
+    </div>
+    <hr>
+
+    <div>
+      POST Order: <br>
+      1 User ✓<br> 
+      Many Books ✓
+    </div>
+    <hr>
+
+    <div>
+      POST User: <br>
+      <br> 
+      Many Orders
+    </div>
+    <hr>
   <div class="row">
     <div class="col-md-12">
       <app-book-control></app-book-control>
