--- a/BookLibraryClient/src/app/admin-dashboard/components/publishers/add-publisher/add-publisher.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/publishers/add-publisher/add-publisher.component.html
@@ -1,43 +1,42 @@
 <div class="container-fluid">
-    <h3>Add Publisher</h3>
-    <div class="row">
-      <div class="col-md-3">
-        <div class="form-group">
-          <h5>Publisher Name</h5>
-          <input type="text" class="form-control" [(ngModel)]="publisher.name">
-        </div>
-        <div class="form-group">
-          <h5>Publisher Books</h5>
-          <input type="text" class="form-control" [(ngModel)]="publisher.books">
-        </div>
-        <div class="form-group">
-          <h5>Books</h5>
-          <div *ngFor="let book of books">
-          <input type="checkbox" 
-                 class="form-control"
-                 (click)="addBook(book.id)" 
-                 /> {{book.title}}
-        </div>
-      </div>
-      </div>
-      <div class="col-md-9">
-        <h3>Preview</h3>
-        <table class="table">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col" >Name</th>
-              <th scope="col" >Books</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>{{publisher.name}}</td>
-              <td>{{publisher.books}}</td>
-            </tr>
-          </tbody>
-        </table>
+  <h3>Add Publisher</h3>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="form-group">
+        <label>Publisher Name</label>
+        <input type="text" class="form-control" [(ngModel)]="publisher.name">
+        <label>Publisher Books</label>
+        <input type="text" class="form-control" [(ngModel)]="publisher.books">
+        <label>Books</label>
+        <input type="text" class="form-control" [(ngModel)]="booksId">
       </div>
     </div>
-    <button class="btn btn-success" (click)="addPublisher(publisher)">Add Publisher</button>
+    <div class="col-md-9">
+      <h3>Preview</h3>
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Books</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>{{publisher.name}}</td>
+            <td>{{publisher.books}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <div class="col">
+          Books:
+          <div *ngFor="let book of books">
+            <input type="radio" name="" id="book" (click)="addBooks(book.id!)">
+            {{' ' + book.title}}
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
+  <button class="btn btn-success" (click)="addPublisher(publisher)">Add Publisher</button>
+</div>
