--- a/BookLibraryClient/src/app/admin-dashboard/components/user/edit-user/edit-user.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/user/edit-user/edit-user.component.html
@@ -60,8 +60,8 @@
                     type="text"
                     class="form-control"
                     id="adress"
-                    [(ngModel)]="currentUser.adress"
-                    name="adress"
+                    [(ngModel)]="currentUser.address"
+                    name="address"
                     />
             </div>
 
