--- a/BookLibraryClient/src/app/admin-dashboard/components/authors/add-author/add-author.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/authors/add-author/add-author.component.html
@@ -3,18 +3,19 @@
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
-          <h5>Author First Name</h5>
-          <input type="text" class="form-control" [(ngModel)]="author.firstName">
-          <h5>Author Last Name</h5>
-          <input type="text" class="form-control" [(ngModel)]="author.lastName">
-          <h5>Date of Birth</h5>
-          <input type="date" class="form-control" [(ngModel)]="author.dateOfBirth">
-          <h5>Country</h5>
-          <input type="text" class="form-control" [(ngModel)]="author.country">
-          <h5>Bibliography</h5>
-          <input type="text" class="form-control" [(ngModel)]="author.bibliography">
-          <!-- <h5>Books</h5>
-          <input type="text" class="form-control" [(ngModel)]="author.books"> -->
+          <label for="author.firstName">First Name</label> 
+          <input type="text" class="form-control" id="author.firstName" [(ngModel)]="author.firstName">
+          <label for="author.lastName">Last Name</label> 
+          <input type="text" class="form-control" id="author.lastName" [(ngModel)]="author.lastName">
+          <label for="author.dateOfBirth">dateOfBirth</label> 
+          <input type="date" class="form-control" id="author.dateOfBirth"[(ngModel)]="author.dateOfBirth">
+          <label for="author.bibliography">Bibliography</label> 
+          <input type="text" class="form-control" id="author.bibliography" [(ngModel)]="author.bibliography">
+          <hr>
+          <label for="author.country.id">Country</label> 
+          <input type="text" class="form-control" id="author.country.id" [(ngModel)]="author.countryId">
+          <label for="author.books.id">Books</label> 
+          <input type="text" class="form-control" id="author.books.id"[(ngModel)]="booksId">
         </div>
       </div>
       <div class="col-md-9">
@@ -37,10 +38,25 @@
               <td>{{author.dateOfBirth}}</td>
               <td>{{author.country}}</td>
               <td>{{author.bibliography}}</td>
-              <!-- <td>{{author.books}}</td> -->
             </tr>
           </tbody>
         </table>
+        <div class="row">
+          <div class="col">
+            Countries:
+            <div *ngFor="let country of countries">
+                <input type="radio" name="" id="country" (click)="addCountry(country.id!)">
+                {{' ' + country.name}}
+              </div>
+          </div>
+          <div class="col">
+            Books:
+            <div *ngFor="let book of books">
+                <input type="radio" name="" id="book" (click)="addBooks(book.id!)">
+                {{' ' + book.title}}
+              </div>
+          </div> 
+        </div>  
       </div>
     </div>
     <button class="btn btn-success" (click)="addAuthor(author)">Add Author</button>
