--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
-          <h5>Genre Name</h5>
+          <label>Genre Name</label>
           <input type="text" class="form-control" [(ngModel)]="genre.name">
-          <h5>Description</h5>
+          <label>Description</label>
           <textarea type="text" class="form-control" [(ngModel)]="genre.description"></textarea>
-          <h5>Is Active?
-          <input type="checkbox" class="form-control" [(ngModel)]="genre.isActive"></h5>
-          <h5>Books</h5>
-          <input type="text" class="form-control" [(ngModel)]="genre.books">
+          <label>Is Active?</label>
+          <input type="checkbox" class="form-control" [(ngModel)]="genre.isActive">
+          <label>Books</label>
+          <input type="text" class="form-control" [(ngModel)]="booksId">
         </div>
       </div>
       <div class="col-md-9">
@@ -30,9 +30,17 @@
               <td>{{genre.isActive}}</td>
             </tr>
             <textarea class="form-control" value="{{genre.description}}" placeholder="Genre Description" cols="100" rows="10"></textarea>
-
           </tbody>
         </table>
+        <div class="row">
+          <div class="col">
+            Books:
+            <div *ngFor="let book of books">
+                <input type="radio" name="" id="book" (click)="addBooks(book.id!)">
+                {{' ' + book.title}}
+              </div>
+          </div>
+        </div>
       </div>
     </div>
     <button class="btn btn-success" (click)="addGenre(genre)">Add Country</button>
